--- a/odontoagil/templates/base.html
+++ b/odontoagil/templates/base.html
@@ -21,10 +21,21 @@
                 <li class="item-inicio"><img src="{% static 'img/icons/home.svg' %}" alt="Ícone Home"/><a href="{% url 'index' %}">Início</a></li>
                 <li class="item-paciente"><img src="{% static 'img/icons/pacient.svg' %}" alt="Ícone Paciente"/><a href="{% url 'listar_paciente' %}">Pacientes</a></li>
                 <li class="item-historia"><img src="{% static 'img/icons/file.svg' %}" alt="Ícone História Clínica"/><a href="{% url 'historia_clinica' %}">Histórias Clínicas</a></li>
-                <li class="item-servicos"><img src="{% static 'img/icons/teeth.svg' %}" alt="Ícone Servicos"/><a href="{% url 'listar_servicos' %}">Servicos</a></li>
+                <li class="item-servicos"><img src="{% static 'img/icons/teeth.svg' %}" alt="Ícone Servicos"/><a href="{% url 'listar_servicos' %}">Serviços</a></li>
                 <li class="item-usuarios"><img src="{% static 'img/icons/user.svg' %}" alt="Ícone Usuários"/><a href="{% url 'listar_usuarios' %}">Usuários</a></li>
             </ul>
         </nav>
+
+        <div class="logout-container" style="margin-top:10px; text-align: right; padding-right: 20px;">
+            {% if user.is_authenticated %}
+                <form method="post" action="{% url 'logout' %}" style="display:inline;">
+                    {% csrf_token %}
+                    <button type="submit" class="btn-logout">Sair</button>
+                </form>
+            {% else %}
+                <a href="{% url 'login' %}" class="btn-login">Entrar</a>
+            {% endif %}
+        </div>
     </header>
 
     <main class="principal">
