--- a/odontoagil/templates/index.html
+++ b/odontoagil/templates/index.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <h1>Bem-vindo ao Sistema OdontoÁgil</h1>
+    <h1>Bem-vindo ao OdontoÁgil</h1>
+    <p>Escolha uma das opções no menu para começar.</p>
 {% endblock %}
